[package]
name = "vnpyrs-chart"
version = "0.1.1"
edition = "2021"
description = "A chart window for both vnpyrs and vnpy"
repository = "https://github.com/vnpyrs/vnpyrs-chart"
license = "MIT"
homepage = "https://vnpyrs.com/"
authors = ["Liehan Wu <vnpyrs@hotmail.com>"]

[dependencies]
bytemuck = { version="1.21.0", features=["derive"] }
chrono = "0.4.39"
env_logger = "0.11.6"
glam = "0.29.2"
log = "0.4.25"
pollster = "0.4.0"
wgpu = "24.0.1"
wgpu_text = "0.9.2"
winit = "0.30.8"
